# issue-tracker-backend

./: .flake8  .gitignore  Dockerfile  README.md  pyproject.toml
app/: console.py  staging.db  temp.db  testing.db
app/api/v1/: dependencies.py  exceptions.py  issue_service.py
app/database/: connector.py  crud.py  setup.py
app/models/: issue.py
app/schema/: issue.py
tests/: config.py  test_issue_service.py
