[tool.poetry]
name = "issue-tracker-backend"
version = "0.1.0"
description = "fastapi sqlite backend for issue tracker project"
authors = ["Ethan Cloin <dev.ethancloin@gmail.com>"]
readme = "README.md"
packages = [{include = "issue_tracker_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
SQLAlchemy = "^1.4.42"
uvicorn = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.8.2"
black = "^22.8.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-import-order = "^0.18.1"
mypy = "^0.971"
isort = "^5.10.1"
flake8-isort = "^4.2.0"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
